<?xml version="1.0"?>
<package format="2">
  <name>moveit_joystick_control</name>
  <version>0.0.0</version>
  <description>The moveit_joystick_control package</description>

  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>

  <license>TODO</license>

  <author email="oehler@sim.tu-darmstadt.de">Martin Oehler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>sensor_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>urdf</depend>
  <depend>eigen_conversions</depend>
</package>
